# vibe-kanban-community

./: .gitignore  README.md  package.json
crates/api-types/: Cargo.toml
crates/client-info/: Cargo.toml
crates/db/: Cargo.toml
crates/deployment/: Cargo.toml
crates/desktop-bridge/: Cargo.toml
crates/embedded-ssh/: Cargo.toml
crates/executors/: Cargo.toml
crates/executors/src/executors/: claude.rs
crates/git/: Cargo.toml
crates/git-host/: Cargo.toml
crates/local-deployment/: Cargo.toml
crates/mcp/: Cargo.toml
crates/preview-proxy/: Cargo.toml
crates/relay-client/: Cargo.toml
crates/relay-control/: Cargo.toml
crates/relay-hosts/: Cargo.toml
crates/relay-protocol/: Cargo.toml
crates/relay-tunnel/: Cargo.toml
crates/relay-tunnel-core/: Cargo.toml
crates/relay-types/: Cargo.toml
crates/relay-webrtc/: Cargo.toml
crates/relay-ws/: Cargo.toml
crates/remote/: .env.remote.example  Cargo.toml
crates/remote-info/: Cargo.toml
crates/remote/src/: config.rs
crates/remote/src/routes/: electric_proxy.rs  mod.rs
crates/review/: Cargo.toml
crates/server/: Cargo.toml
crates/server-info/: Cargo.toml
crates/services/: Cargo.toml
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/trusted-key-auth/: Cargo.toml
crates/utils/: Cargo.toml
crates/workspace-manager/: Cargo.toml
crates/worktree-manager/: Cargo.toml
crates/ws-bridge/: Cargo.toml
docs/: self-host-local.md
npx-cli/: package-lock.json  package.json
