[package]
name = "git-host"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
backon = "1.5.1"
chrono = { version = "0.4", features = ["serde"] }
db = { path = "../db" }
enum_dispatch = "0.3.13"
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.21"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ts-rs = { workspace = true }
url = "2.5"
utils = { path = "../utils" }
