[package]
name = "preview-proxy"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
ws-bridge = { path = "../ws-bridge" }
reqwest = { workspace = true }
http = "1"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utils = { path = "../utils" }
uuid = { version = "1.0", features = ["serde", "v4"] }
