[package]
name = "relay-client"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
http = "1"
os_info = "3.12.0"
relay-control = { path = "../relay-control" }
relay-ws = { path = "../relay-ws" }
relay-types = { path = "../relay-types" }
reqwest = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
spake2 = { version = "0.5.0-pre.0", features = ["getrandom"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tokio = { workspace = true }
trusted-key-auth = { path = "../trusted-key-auth" }
utils = { path = "../utils" }
uuid = { version = "1.0", features = ["v4", "serde"] }
