[package]
name = "relay-control"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
base64 = "0.22"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
