[package]
name = "relay-tunnel-core"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
futures-util = "0.3"
http = "1"
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
tokio = { workspace = true }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-yamux = "0.3.17"
tracing = { workspace = true }
ws-bridge = { path = "../ws-bridge" }
