[package]
name = "relay-types"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
sqlx = { version = "0.8.6", default-features = false, features = ["postgres", "uuid", "chrono", "derive"] }
ts-rs = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
