[package]
name = "relay-ws"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = ["ws"] }
base64 = "0.22"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures-util = { version = "0.3", features = ["sink"] }
http = "1"
relay-control = { path = "../relay-control" }
relay-protocol = { path = "../relay-protocol" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { version = "1.0", features = ["net"] }
tokio-tungstenite = { version = "0.26" }
uuid = { version = "1.0" }

[dev-dependencies]
futures-channel = { version = "0.3", features = ["sink"] }
rand = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
